pretty good looking webpage

--- a/movie-tie-in-class/index.html
+++ b/movie-tie-in-class/index.html
@@ -44,30 +44,132 @@
             <div style="font-size: 36px; font-weight: 800">
                 Movie Tie-In Games and Adaptations
             </div>
-            <div style="margin-top: 25px">
-                Adaptations have existed for thousands of years: from Shakespeare, to Joyce, and, yes, to 1983’s <i>E.T.: The Extraterrestrial</i> for the Atari 2600. Adaptations hold a tenuous place in culture, almost universally disdained and devalued. And yet, they are seemingly everywhere: the MCU is unavoidable, every major video game IP is getting a TV series, Mario has a theme park, and Netflix has a show based on r/twosentencehorror. Like it or not, adaptations have achieved staying power, and it’s only fair to assume this has happened because they hold some fascination with audiences, what Linda Hutcheon calls “repetition with variation.” Movie tie-in games, in particular, have achieved a particularly pointed form of infamy, relegated to the dustbin of willfully forgotten history. But there exist bright spots in these works – <i>GoldenEye</i>, <i>Spider-Man 2</i>, and <i>King Kong</i>, to name a few – and lessons for the strengths and follies of games as a medium.
-            </div>
-            <div style="margin-top: 25px">
-                The goal for this class is to examine adaptation within a video game format. We will discuss the nature of adaptation, and the aesthetic effects of intertextuality. Each week we’ll watch a film, and in class we’ll play its video game adaptation, breaking down the particular challenges, triumphs, or failures of these works, and investigating what they reveal to us about video games at large. What does moving these stories from one form to another reveal? Finally, we’ll seek to understand the many modes of adaptation itself: traditional narrative adaptations like <i>Peter Jackson’s King Kong</i>, adaptations of worlds like <i>Alien: Isolation</i>, pastiche in works like <i>Uncharted 2</i> and <i>Until Dawn</i>, and more “fuzzy” adaptations like in <i>Oikospiel</i>. By the end of the class, students will have a grasp on the broad histories of licensed video games, the many modes of adaptations and their effects, and have created their own movie adaptations in an engine of their choice (no code required).
-            </div>
-            <div style="margin-top: 25px">
-                This class is for you if you:
-                <ul>
-                    <li>are interested in the intersections between games, play, and cinema</li>
-                    <li>want to make & share your own adaptations alongside others</li>
-                    <li>want to meet in a physical space to discuss art & games with others</li>
-                    <li>want an excuse to play through 1983’s <i>E.T.: The Extraterrestrial</i></li>
-                </ul>
 
-                We will be making a video game adaptation of a movie in this class, but there is no expectation of having a programming background – we'll cover no-code game engines as well (though if you do have a programming background, you are free to use whatever engines you like)
+            <div style="font-size: 26px; font-weight: 800; margin-top: 50px;">
+                Overview
             </div>
             <div style="margin-top: 25px">
-                <b>Date: </b>June 1 - July 20<br/>
-                <b>Time: </b>Sundays, 11am - 2pm<br/>
-                <b>Out of class expectations</b>: Watch one movie a week; make a movie adaptation of your own<br/>
-                <b>Location: </b> <a href="https://boshis.place">Boshi's Place</a>, 1002 Metropolitan Avenue, Brooklyn, NY, 11221
+                This is a class that explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “palimpsestuous” quality).
             </div>
+            <div style="margin-top: 25px">
+                Each week we’ll watch a film, and in class we’ll play its game adaptation. Together, we’ll investigate how the game is in conversation with its source. How has the story transformed in its transfer from cinema to play, and what are the aesthetics and difficulties that arise from this transformation?
+            </div>
+            <div style="margin-top: 25px">
+                Finally, over the length of the course, we’ll seek to understand the many modes of adaptation itself: narrative adaptations like <i>Peter Jackson’s King Kong</i>, world adaptations like <i>Alien: Isolation</i>, “fuzzy” adaptations like <i>Oikospiel</i>, and pastiche in works like <i>Until Dawn</i>. By the end of the class, students will have a grasp on the broad histories of licensed games, the many modes of adaptations and their effects, and have created their own movie adaptations in an engine of their choice (no code required).
+            </div>
+            <div class="Blog-dividerContainer">
+                <div class="Blog-divider" style="">
+                    <hr/> ⋞ ☀ ⋟ <hr/>
+                </div>
+                <div class="Blog-dividerFaders">
+                    <div class="Blog-dividerFaderLeft"></div><div class="Blog-dividerFaderRight"></div>
+                </div>
+            </div>
+
+            <div style="font-size: 26px; font-weight: 800; margin-top: 25px;">
+                Details
+            </div>
+            <div style="margin-top: 25px">
+                <b>Instructor: </b>Joey Schutz<br/>
+                <b>Date: </b>June 1 - July 20 (8 weeks)<br/>
+                <b>Time: </b>Sundays, 11am - 2pm<br/>
+                <b>Location: </b> <a href="https://boshis.place">Boshi's Place</a>, 1002 Metropolitan Avenue, Brooklyn, NY, 11221<br/>
+                <b>Cost: </b>$600<br/>
+                <b>Deadline: </b>Applications close April 6
+            </div>
+            <div class="Blog-dividerContainer">
+                <div class="Blog-divider" style="">
+                    <hr/> ⋞ ☀ ⋟ <hr/>
+                </div>
+                <div class="Blog-dividerFaders">
+                    <div class="Blog-dividerFaderLeft"></div><div class="Blog-dividerFaderRight"></div>
+                </div>
+            </div>
+
+            <div style="font-size: 26px; font-weight: 800; margin-top: 25px;">
+                Course Outline
+            </div>
+            <div style="margin-top: 25px">
+                <ul>
+                    <li>Week 1: Introductions, 1980s - 1990s licensed games</li>
+                    <li>Week 2: The first good movie tie-in game</li>
+                    <li>Week 3: Adaptating characters</li>
+                    <li>Week 4: Adapting worlds</li>
+                    <li>Week 5: Better than the movie?</li>
+                    <li>Week 6: Pastiche</li>
+                    <li>Week 7: Plunderludics</li>
+                    <li>Week 8: Remakes</li>
+                </ul>
+            </div>
+            <div class="Blog-dividerContainer">
+                <div class="Blog-divider" style="">
+                    <hr/> ⋞ ☀ ⋟ <hr/>
+                </div>
+                <div class="Blog-dividerFaders">
+                    <div class="Blog-dividerFaderLeft"></div><div class="Blog-dividerFaderRight"></div>
+                </div>
+            </div>
+
+            <div style="font-size: 26px; font-weight: 800; margin-top: 25px;">
+                Expectations
+            </div>
+            <div style="margin-top: 25px">
+                <i>Time & Workload:</i><br/>
+                <span style="display: block; margin-top: 15px;">Students should plan to dedicate 2 to 3 hours outside of class for films, readings, and working on a game adaptation.</span>
+        </div>
+        <div style="margin-top: 23px">
+            <i>Technical Experience:</i><br/>
+            <span style="display: block; margin-top: 15px;">No technical experience is expected. For game making, we will cover no-code engines for anyone without a programming background.</span>
+        </div>
+        <div class="Blog-dividerContainer">
+            <div class="Blog-divider" style="">
+                <hr/> ⋞ ☀ ⋟ <hr/>
+            </div>
+            <div class="Blog-dividerFaders">
+                <div class="Blog-dividerFaderLeft"></div><div class="Blog-dividerFaderRight"></div>
+            </div>
+        </div>
+
+        <div style="font-size: 26px; font-weight: 800; margin-top: 25px;">
+            Is this class for me?
+        </div>
+        <div style="margin-top: 25px">
+            This class is for you if you:
+            <ul>
+                <li>are interested in the intersections between games, play, and cinema</li>
+                <li>want to make & share your own adaptations alongside others</li>
+                <li>want to meet in a physical space to discuss art & games with others</li>
+                <li>want an excuse to play through 1983’s <i>E.T.: The Extraterrestrial</i></li>
+            </ul>
+        
+            We will be making a video game adaptation of a movie in this class, but there is no expectation of having a programming background – we'll cover no-code game engines as well (though if you do have a programming background, you are free to use whatever engines you like)
+        </div>
+        <div class="Blog-dividerContainer">
+            <div class="Blog-divider" style="">
+                <hr/> ⋞ ☀ ⋟ <hr/>
+            </div>
+            <div class="Blog-dividerFaders">
+                <div class="Blog-dividerFaderLeft"></div><div class="Blog-dividerFaderRight"></div>
+            </div>
+        </div>
+
+        <div style="font-size: 26px; font-weight: 800; margin-top: 25px;">
+            About the venue
+        </div>
+        <div style="margin-top: 25px">
+            <a href="https://boshis.place">Boshi's Place</a> is a space that celebrates game making as a craft. We host game events, workshops, music shows, and more, and are located in East Williamsburg.
         </div>
     </div>
 </body>
 </html>
+<!-- <div style="margin-top: 25px">
+    This class is for you if you:
+    <ul>
+        <li>are interested in the intersections between games, play, and cinema</li>
+        <li>want to make & share your own adaptations alongside others</li>
+        <li>want to meet in a physical space to discuss art & games with others</li>
+        <li>want an excuse to play through 1983’s <i>E.T.: The Extraterrestrial</i></li>
+    </ul>
+
+    We will be making a video game adaptation of a movie in this class, but there is no expectation of having a programming background – we'll cover no-code game engines as well (though if you do have a programming background, you are free to use whatever engines you like)
+</div> -->
