added link for palimpsest

--- a/movie-tie-in-class/index.html
+++ b/movie-tie-in-class/index.html
@@ -2,16 +2,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
 
-<meta name="title" property="og:title" content="blog - joey schutz">
+<meta name="title" property="og:title" content="movie tie-in games & adaptation">
 <meta name="type" property="og:type" content="website">
-<meta name="image" property="og:image" content="/img/pinksmiles.png">
 <meta name="url" property="og:url" content="">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="blog.joeyschutz.com">
+<meta property="twitter:domain" content="joeyschutz.com">
 <meta property="twitter:url" content="">
-<meta name="twitter:title" content="blog - joey schutz">
-<meta name="twitter:image" content="/img/pinksmiles.png">
+<meta name="twitter:title" content="movie tie-in games & adaptation">
 
 <head>
     <title>joey schutz dot com</title>
@@ -49,7 +47,7 @@
                 Overview
             </div>
             <div style="margin-top: 25px">
-                This is a class that explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “palimpsestuous” quality).
+                This is a class that explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “<a href="https://en.wikipedia.org/wiki/Palimpsest">palimpsestuous</a>” quality).
             </div>
             <div style="margin-top: 25px">
                 Each week we’ll watch a film, and in class we’ll play its game adaptation. Together, we’ll investigate how the game is in conversation with its source. How has the story transformed in its transfer from cinema to play, and what are the aesthetics and difficulties that arise from this transformation?
