link to my website; remove teaching section for now

--- a/movie-tie-in-class/index.html
+++ b/movie-tie-in-class/index.html
@@ -68,7 +68,7 @@
                 Details
             </div>
             <div style="margin-top: 25px">
-                <b>Instructor: </b>Joey Schutz<br/>
+                <b>Instructor: </b><a href="https://joeyschutz.com">Joey Schutz</a><br/>
                 <b>Date: </b>June 1 - July 20 (8 weeks)<br/>
                 <b>Time: </b>Sundays, 11am - 2pm<br/>
                 <b>Location: </b> <a href="https://boshis.place">Boshi's Place</a>, 1002 Metropolitan Avenue, Brooklyn, NY, 11221<br/>
