--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div style="margin-top: 100px">
                 <menu class="Landing-navContainer">
                     <li><a style="text-decoration: none;" href="https://jamschutz.itch.io">GAMES</a></li>
-                    <li><a style="text-decoration: none;" href="/teaching">TEACHING</a></li>
+                    <!-- <li><a style="text-decoration: none;" href="/teaching">TEACHING</a></li> -->
                     <li><a style="text-decoration: none;" href="https://blog.joeyschutz.com">WRITING</a></li>
                 </menu>
             </div>
