updating font; buttons on bottom

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             
             <div style="margin-top: 100px">
                 <menu class="Landing-navContainer">
-                    <li><a style="text-decoration: none;" href="https://jamschutz.itch.io">GAMES</a></li>
+                    <li><a style="text-decoration: none;" href="https://jamschutz.itch.io">- games -</a></li>
                     <!-- <li><a style="text-decoration: none;" href="/teaching">TEACHING</a></li> -->
-                    <li><a style="text-decoration: none;" href="https://blog.joeyschutz.com">WRITING</a></li>
+                    <li><a style="text-decoration: none;" href="https://blog.joeyschutz.com">- writing -</a></li>
                 </menu>
             </div>
         </div>
