updated week outline

--- a/movie-tie-in-class/index.html
+++ b/movie-tie-in-class/index.html
@@ -47,7 +47,7 @@
                 Overview
             </div>
             <div style="margin-top: 25px">
-                This is a class that explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “<a href="https://en.wikipedia.org/wiki/Palimpsest">palimpsestuous</a>” quality).
+                This class explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “<a href="https://en.wikipedia.org/wiki/Palimpsest">palimpsestuous</a>” quality).
             </div>
             <div style="margin-top: 25px">
                 Each week we’ll watch a film, and in class we’ll play its game adaptation. Together, we’ll investigate how the game is in conversation with its source. How has the story transformed in its transfer from cinema to play, and what are the aesthetics and difficulties that arise from this transformation?
@@ -90,11 +90,11 @@
             <div style="margin-top: 25px">
                 <ul>
                     <li>Week 1: Introductions, 1980s - 1990s licensed games</li>
-                    <li>Week 2: The first good movie tie-in game</li>
-                    <li>Week 3: Adaptating characters</li>
-                    <li>Week 4: Adapting worlds</li>
-                    <li>Week 5: Better than the movie?</li>
-                    <li>Week 6: Pastiche</li>
+                    <li>Week 2: Adaptating characters</li>
+                    <li>Week 3: Adaptating worlds</li>
+                    <li>Week 4: Better than the movie?</li>
+                    <li>Week 5: Adaptation at the table</li>
+                    <li>Week 6: Postmoderns & Pastiches</li>
                     <li>Week 7: Plunderludics</li>
                     <li>Week 8: Remakes</li>
                 </ul>
