class page looks good

--- a/movie-tie-in-class/index.html
+++ b/movie-tie-in-class/index.html
@@ -40,20 +40,20 @@
     <div class="Body">
         <div class="Body-container" style="font-family: 'SecondaryFont'">
             <div style="font-size: 36px; font-weight: 800">
-                Movie Tie-In Games and Adaptations
+                Games & Adaptations Class
             </div>
 
             <div style="font-size: 26px; font-weight: 800; margin-top: 50px;">
                 Overview
             </div>
             <div style="margin-top: 25px">
-                This class explores adaptations within the context of games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “<a href="https://en.wikipedia.org/wiki/Palimpsest">palimpsestuous</a>” quality).
+                This class explores adaptations within the context of movie tie-in games: both board games and video games. We will discuss the nature of adaptation – a story told over again – and the aesthetic effects of intertextuality (what Linda Hutcheon calls its “<a href="https://en.wikipedia.org/wiki/Palimpsest">palimpsestuous</a>” quality).
             </div>
             <div style="margin-top: 25px">
                 Each week we’ll watch a film, and in class we’ll play its game adaptation. Together, we’ll investigate how the game is in conversation with its source. How has the story transformed in its transfer from cinema to play, and what are the aesthetics and difficulties that arise from this transformation?
             </div>
             <div style="margin-top: 25px">
-                Finally, over the length of the course, we’ll seek to understand the many modes of adaptation itself: narrative adaptations like <i>Peter Jackson’s King Kong</i>, world adaptations like <i>Alien: Isolation</i>, “fuzzy” adaptations like <i>Oikospiel</i>, and pastiche in works like <i>Until Dawn</i>. By the end of the class, students will have a grasp on the broad histories of licensed games, the many modes of adaptations and their effects, and have created their own movie adaptations in an engine of their choice (no code required).
+                Finally, over the length of the course, we’ll seek to understand the many modes of adaptation itself, following the theories of Fredric Jameson, Jean Baudrillard, Linda Hutcheon, and more. We'll discuss narrative adaptations like <i>Peter Jackson’s King Kong</i>, world adaptations like <i>Alien: Isolation</i>, “fuzzy” adaptations like <i>Oikospiel</i>, and pastiche in works like <i>Until Dawn</i>. By the end of the class, you will have a grasp on the broad histories of licensed games, the many modes of adaptations and their effects, and have created your own movie adaptation in an engine of their choice (no code required).
             </div>
             <div class="Blog-dividerContainer">
                 <div class="Blog-divider" style="">
@@ -69,11 +69,13 @@
             </div>
             <div style="margin-top: 25px">
                 <b>Instructor: </b><a href="https://joeyschutz.com">Joey Schutz</a><br/>
-                <b>Date: </b>June 1 - July 20 (8 weeks)<br/>
+                <b>Date: </b>June 8 - July 27 (8 weeks)<br/>
                 <b>Time: </b>Sundays, 11am - 2pm<br/>
-                <b>Location: </b> <a href="https://boshis.place">Boshi's Place</a>, 1002 Metropolitan Avenue, Brooklyn, NY, 11221<br/>
+                <b>Location: </b>Online, or In person, at <a href="https://boshis.place">Boshi's Place</a>, 1002 Metropolitan Avenue, Brooklyn, NY, 11221<br/>
                 <b>Cost: </b>$600<br/>
-                <b>Deadline: </b>Applications close April 6
+                <b>Deadline: </b>Applications close April 15<br/><br/>
+
+                <a style="font-size: 26px;" href="https://docs.google.com/forms/d/e/1FAIpQLScjIbk9lTh981pu8axBT5eNH6CVqn9SNwpNkxuJmvFKsm3aCA/viewform?usp=header">Sign up here!</a>
             </div>
             <div class="Blog-dividerContainer">
                 <div class="Blog-divider" style="">
@@ -134,6 +136,7 @@
         <div style="margin-top: 25px">
             This class is for you if you:
             <ul>
+                <li>are interested in the theoretical underpinnings and modalities of adaptation</li>
                 <li>are interested in the intersections between games, play, and cinema</li>
                 <li>want to make & share your own adaptations alongside others</li>
                 <li>want to meet in a physical space to discuss art & games with others</li>
